--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_gravity="center"
-        android:id="@+id/switchMode">
+        android:id="@+id/switchMode"
+        android:background="@color/colorPrimary">
 
     </View>
 
